<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kakaomap.KakaoMap">
    <RelativeLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/b" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioButton4"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subway"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="109dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="155dp" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subwayBus"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="109dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="123dp" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="109dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="91dp" />

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>