<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/kakaoMap"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:onClick="onClickKakaoMap"
            android:text="@string/kakao_map_activity_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cameraActivity"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:onClick="onClickCameraActivity"
            android:text="@string/camera_activity_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kakaoMap" />

        <Button
            android:id="@+id/trafficActivity"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:onClick="onClickTrafficActivity"
            android:text="@string/traffic_activity_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraActivity" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>